add Thommy´s changes
