# services/data-service/src/main/resources/api.yml
@@ -357,6 +357,21 @@ paths:
         schema:
           type: string
           example: riddle123
+    get:
+      operationId: getRiddleById
+      tags:
+        - Riddle
+      summary: Get one riddle by id
+      description: Retrieve riddle that matches the UUID
+      responses:
+        '200':
+          description: The riddle
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RiddleDTO'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
     put:
       operationId: putRiddle
       tags:
